# iot-timeseries-forecasting-mlops

./: README.md  pyproject.toml  request.json  test_predict.py
.github/workflows/: ci.yml
configs/: default.yaml
docker/: Dockerfile
models/: model.pt
reports/: metrics.json  train_history.json
src/ts_forecast/: data.py  evaluate.py  predict.py  train.py  utils.py
src/ts_forecast.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: .gitignore  README.md  pyproject.toml  test_data.py
tests/src/ts_forecast/: api.py  data.py  model.py  predict.py  train.py
tests/tests/: test_data.py  test_predict.py
