[project]

name = "ts_forecast"

version = "0.1.0"

description = "IoT time-series forecasting with PyTorch + FastAPI + Docker + CI"

requires-python = ">=3.10"

dependencies = [

  "numpy>=1.26",

  "pandas>=2.2",

  "pyyaml>=6.0",

  "torch>=2.2",

  "fastapi>=0.110",

  "uvicorn[standard]>=0.27",

  "pydantic>=2.6",

]



[project.optional-dependencies]

dev = [

  "pytest>=8.0",

  "ruff>=0.6",

]



[tool.ruff]

line-length = 100

target-version = "py310"

select = ["E", "F", "I", "UP", "B"]



[tool.pytest.ini_options]

testpaths = ["tests"]

pythonpath = ["src"]


